unpackaged/main/default/objects/Account/fields/Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is a checkbox for the purpose of being a checkbox</description>
    <label>Checkbox</label>
    <type>Checkbox</type>
</CustomField>