unpackaged/main/default/objects/Account/fields/Is_a_Churn_Risk__c.field-meta.xml
<CustomField>
    <fullName>Is_a_Churn_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates churn risk</description>
    <label>Is a Churn Risk</label>
    <type>Checkbox</type>
</CustomField>